tests/suite/snapshots/suite__check__tests__check__bad_generic_4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_generic_4.xi:4:9]
   │
 4 │         a.b = 1
   ·         ┬  
   ·         ╰── Receiver of dot operator must be a class
   · 
 9 │     a: A::<int> = new A::<int>
   ·        ────┬───  
   ·            ╰───── Template instantiated here
───╯

