tests/suite/snapshots/suite__check__tests__check__bad_generic_6.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(checked)
---
Error: Semantic error
    ╭─[tests/check/bad_generic_6.xi:4:16]
    │
  4 │         return field + field
    ·                ──┬──  
    ·                  ╰──── Expected int but found bool
    · 
 12 │     b: B::<bool> = new B::<bool>
    ·        ────┬────  
    ·            ╰────── Template instantiated here
────╯

