tests/suite/snapshots/suite__check__tests__check__bad_generic_7.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(checked)
---
Error: Semantic error
   ╭─[tests/check/bad_generic_7.xi:4:12]
   │
 4 │     a: A::<B> = new A::<B>
   ·            ┬  
   ·            ╰── Unbound class B
───╯

